# prediction-market-efficiency

./: .gitignore  README.md  pyproject.toml
config/: mvp.yaml
notebooks/: 01_data_audit.ipynb  02_calibration.ipynb  03_efficiency.ipynb
reports/: efficiency_report.md  extreme_weather_report.md  final_report.md  full_history_report.md  information_arrival_report.md  information_source_report.md  liquidity_report.md  pilot_calibration_report.md  weather_information_source_report.md
reports/pilot/: efficiency_report.md
reports/tables/: calibration_deciles.csv  calibration_metrics.csv  efficiency_coefficients.csv  efficiency_metrics.csv  extreme_calibration_metrics.csv  extreme_calibration_tests.csv  extreme_efficiency_metrics.csv  extreme_temperature_events.csv  extreme_thresholds.csv  information_arrival_decomposition.csv  information_arrival_scores.csv  information_source_tables.csv  liquidity_calibration_metrics.csv  liquidity_comparisons.csv  liquidity_reliability.csv  market_vs_forecast_relationship.csv  weather_forecast_revisions.csv
scripts/: calibration_analysis.py  conditional_studies.py  descriptive_summary.py  efficiency_analysis.py  information_source_analysis.py  weather_information_analysis.py
src/pm_efficiency/: __init__.py  cli.py  config.py  (+1 more)
tests/: test_cleaning.py  test_conditional_studies.py  test_descriptive.py  test_efficiency.py  test_features.py  test_fixed_horizon_calibration.py  test_information_sources.py  test_kalshi.py  test_metrics.py  test_paired_efficiency.py  test_revision_pairs.py  test_snapshots.py  test_weather_information.py
(+36 files in other folders)
