[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "pm-efficiency"
version = "0.1.0"
description = "Research Kalshi weather-market calibration, efficiency, and information aggregation."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27",
  "matplotlib>=3.9",
  "numpy>=2.0",
  "pandas>=2.2",
  "pyarrow>=17",
  "pydantic>=2.8",
  "PyYAML>=6.0",
  "scikit-learn>=1.5",
  "scipy>=1.14",
  "seaborn>=0.13",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "pytest-cov>=5", "ruff>=0.6"]

[project.scripts]
pm-efficiency = "pm_efficiency.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pm_efficiency"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
